# nx53

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  build.rs  install.sh  uninstall.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/: cli.rs  config.rs  firewall.rs  logic.rs  main.rs  monitor.rs  update.rs
