[package]
name = "nx53"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
dashmap = "6.1"
pcap = "1.1" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
etherparse = "0.13"
toml = "0.9.11"

dns-parser = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
iptables = "0.5"
self_update = "0.42"

[build-dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
clap_mangen = "0.2"
