[package]
name = "nx53"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
dashmap = "6.1"
pcap = "2.4" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
etherparse = "0.19"
toml = "0.9.11"

dns-parser = "0.8"
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "linux")'.dependencies]
nftables = "0.6"
self_update = "0.42"
libc = "0.2"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.4"
clap_mangen = "0.2"
